prevent title input from jumping on focus

--- a/booqcms/app/assets/stylesheets/booqcms/_admin_dashboard.scss
+++ b/booqcms/app/assets/stylesheets/booqcms/_admin_dashboard.scss
@@ -252,8 +252,8 @@ small.need-help-link {
   color: #888;
 }
 
-form.form_in_place {
+form.form_in_place .textarea-body {
   position:relative;
-  top:-20px;
   left:-2px;
+  top:-20px;
 }
